--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>ASME WEB CODING | Netflex Login Page</title>
+    <title>Page</title>
 </head>
 <body>
     <div class="container">
@@ -25,7 +25,7 @@
           </div>
         </nav>
         <div class="content">
-          <h2>Hello,<br>Welcome To ASMR WEB CODING </h2>
+          <h2>Hello,<br>Welcome To My web Page </h2>
           <p>I'm A Web Developer & Designer. I Will Make Your Project Beautiful And Attractive,<br>You Can Find Me On GitHub.</p>
         </div>
         <div class="link">
